// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server-message should render 1`] = `
<Callout
  type="info"
>
  There is no data associated with this request
</Callout>
`;

exports[`server-message should render 2`] = `
<Callout
  type="alert"
>
  There was an error, this is not a valid request to the server
</Callout>
`;

exports[`server-message should render 3`] = `
<Callout
  type="alert"
>
  There was an error, this is not a known resource on the server
</Callout>
`;

exports[`server-message should render 4`] = `
<Callout
  type="alert"
>
  The query is still running in the background. We will update the page once the data is ready
</Callout>
`;

exports[`server-message should render 5`] = `
<Callout
  type="alert"
>
  The API reported an error, but the cause has not been determined
</Callout>
`;
